<resources>
    <string name="app_name">Silent Application</string>
    <string name="StaffAccess">Staff Access</string>
    <string name="StudentAccess">Student Access</string>
    <string name="CreateQR">Create QR</string>
    <string name="ScanDevices">Scan Nearby Devices..</string>
    <string name="Challenge">Take challenge of the day</string>
    <string name="title_activity_create_qr">createQR</string>
    <string name="bluetoothDevice">Devices On Call</string>

    <!--Login Page Strings-->
    <string name="loginName">Name:</string>
    <string name="loginPass">Password:</string>
    <string name="LoginButton">Submit</string>
    <string name="hintName">Please enter name here.</string>
    <string name="hintPass">Please enter password here.</string>

    <!--Staff Hidden Menu-->
    <string name="scanQr">Scan Qr</string>
    <string name="resetComplaints">Reset Complaints</string>

    <!--Complaint Page Strings-->
    <string name="nudgeDevice">Nudge the Device</string>
    <string name="reportDevice">Report the Device</string>
    <string name="reportText">Actions Available-</string>


    <!--Challenge Page Strings-->
    <string name="takeChallenge">Take Challenge</string>
    <string name="viewScore">View Score</string>

    <!--Take Challenge Fragment Strings-->
    <string name="answerHint">Answer here.</string>
    <string name="SubmitAnswer">Submit</string>

    <!--Get Score Fragment Strings-->
    <string name="loadScore">Your score: </string>
    <string name="maxScore">High Score: </string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_challenge">Challenge</string>
</resources>
