<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:id="@+id/loginFragment"
    tools:context="com.example.rajpa.silentapplication.StaffLogin">
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="20dp">
        <TextView
            android:text="@string/loginName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/userName"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:hint="@string/hintName"/>
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="20dp">
        <TextView
            android:text="@string/loginPass"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/userPass"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:hint="@string/hintPass"/>
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="30dp"
        android:paddingLeft="130dp">
        <Button
            android:id="@+id/submitLogin"
            android:text="@string/LoginButton"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <ProgressBar
            android:id="@+id/loginProgress"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
    </TableRow>
</TableLayout>
