<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.rajpa.silentapplication.ComplaintPage">
    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/reportText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="25dp"/>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="30dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/circle"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="2"
            android:paddingTop="5dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/nudgeDevice"
            android:textStyle="bold"
            android:textSize="22dp"
            android:text="@string/nudgeDevice"/>

        <ProgressBar
            android:id="@+id/nudgeBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"/>
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="30dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/circle"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textSize="22dp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:id="@+id/reportDevice"
            android:text="@string/reportDevice"/>
        <ProgressBar
            android:id="@+id/reportBar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
    </TableRow>

</TableLayout>
